# froth_monitor_v2

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: check-links.yml  ci.yml  pre-commit_autoupdate.yml
data/: 20250524.csv  20250525.csv  20250526.csv  20250526_exe.csv  20250527.csv
data/auto_save/: information.txt
froth_monitor/: __init__.py  __main__.py  autosaver.py  camera_thread.py  event_handler.py  export.py  fm_model.py  gui_backup.py  gui_window.py  image_analysis.py  overlay_widget.py  video_recorder.py
tests/: __init__.py  test_myproject.py
