[tool.poetry]
name = "froth_monitor"
version = "0.1.0"
description = ""
authors = ["Yiyang <eeeyoung2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
et-xmlfile = "^2.0.0"
numpy = "2.1.3"
opencv-python = "^4.10.0.84"
openpyxl = "^3.1.5"
pyqtgraph = "^0.13.7"
PySide6 = "^6.8.0.2"
pytest = "^8.3.3"
pytest-qt = "^4.4.0"
importlib-metadata = "^8.5.0"
importlib = "^1.0.4"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.2.1"
pytest-mypy = "^1.0.0"
pytest-mock = "^3.7.0"
pre-commit = "^4.2.0"
ruff = "^0.11.2"
types-toml = "^0.10.8.20240310"
pyinstaller = "^6.12.0"
shiboken6 = "^6.8.0.2"

[tool.poetry.scripts]
froth_monitor = "froth_monitor.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
